@@ -16,7 +16,6 @@ from trytond.transaction import Transaction
 from trytond.cache import Cache
 from trytond.exceptions import UserError, UserWarning, NotLogged, \
     ConcurrencyException
-from trytond.rpc import RPC
 
 logger = logging.getLogger(__name__)
 
@@ -105,9 +104,6 @@ def dispatch(host, port, protocol, database_name, user, session, object_type,
                 for object_name, obj in pool.iterobject(type=type):
                     for method in obj.__rpc__:
                         res.append(type + '.' + object_name + '.' + method)
-                    if hasattr(obj, '_buttons'):
-                        for button in obj._buttons:
-                            res.append(type + '.' + object_name + '.' + button)
             return res
         elif method == 'methodSignature':
             return 'signatures not supported'
@@ -139,8 +135,6 @@ def dispatch(host, port, protocol, database_name, user, session, object_type,
 
     if method in obj.__rpc__:
         rpc = obj.__rpc__[method]
-    elif method in getattr(obj, '_buttons', {}):
-        rpc = RPC(readonly=False, instantiate=0)
     else:
         raise UserError('Calling method %s on %s %s is not allowed!'
             % (method, object_type, object_name))
